# MNN

./: .gitignore  CMakeLists.txt  build.sh
benchmark/: bench_android.sh
demo/exec/: CMakeLists.txt  classification.cpp  face_recognition.cpp  retinaface.cpp  retinanet.cpp  ssd.cpp
quant_test/: download_voc07.sh  generate_quant_models.py  retina_quant_config.json  retinanet_quant.out  ssd_quant.out  test_retina.sh  test_ssd.sh  voc_eval.py
quant_test/coco_test/: quant.py  test_map.py
quant_test/cpp/: CMakeLists.txt  retinanet_quant.cpp  ssd_quant.cpp
quant_test/detection_output/quant/retina/: aeroplane.txt  bicycle.txt  bird.txt  boat.txt  bottle.txt  bus.txt  car.txt  cat.txt  chair.txt  cow.txt  diningtable.txt  dog.txt  horse.txt  motorbike.txt  person.txt  pottedplant.txt  sheep.txt  sofa.txt  train.txt  tvmonitor.txt
quant_test/detection_output/unquant/retina/: aeroplane.txt  bicycle.txt  bird.txt  boat.txt  bottle.txt  bus.txt  car.txt  cat.txt  chair.txt  cow.txt  diningtable.txt  dog.txt  horse.txt  motorbike.txt  person.txt  pottedplant.txt  sheep.txt  sofa.txt  train.txt  tvmonitor.txt
quant_test/models/quant/: ssd_mbv2_voc.mnn
tools/converter/source/optimizer/onnxextra/: OnnxUpsample.cpp
